# Radiation-Detector

./: README.md
Firmware/Radiation-Detector/: CMakeLists.txt  Radiation-Detector.ino  filelist.txt  ui.c  ui.h  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_font_SonicSaber.c  ui_img_1719020684.c  ui_img_176188083.c  ui_img_220545925.c  ui_img_290762343.c  ui_img_584212719.c  ui_img_background_png.c
Firmware/Radiation_Detector/: README.md  platformio.ini
Firmware/Radiation_Detector/lib/: lv_conf.h
Firmware/Radiation_Detector/src/: CMakeLists.txt  Radiation-Detector.cpp  dashboard.cpp  dashboard.h  filelist.txt  radiation_data.h  ui.c  ui.h  ui_Charts1h.c  ui_Charts24h.c  ui_ChartsSpectrum.c  (+20 more)
Libraries/: lv_conf.h
Libraries/TFT_eSPI/: User_Setup.h
PCB/RadiationDetector/: Battery.SchDoc  GeigerCircuit.SchDoc  Geiger_Circuit.SchDoc  IO_Ports.SchDoc  Microcontroller_Module.SchDoc  Microcontroller_Unit.SchDoc  PcbLib.PcbLib  Peripherals.SchDoc  Power.SchDoc  RadiationDetector.OutJob  RadiationDetector.PcbDoc  RadiationDetector.PrjPcb  RadiationDetector.PrjPcbStructure  RadiationDetector.SchDoc  Schlib.SchLib  ScintillatorCircuit.SchDoc  Scintillator_Circuit.SchDoc
Radiation_Detector_Wiki/: Contador Geiger.md  Detector De Radiación.md  ESP32-S3.md  LVGL.md  Partículas.md  Tubo Geiger.md
Radiation_Detector_Wiki/.obsidian/: app.json  workspace.json
Simulation/: BAS21VM.lib  Generador_HV.asc
SquareLineFiles/: SquareLine_Project.sll  SquareLine_Project.spj
User Interface/SquareLineFiles/: SquareLine_Project.sll  SquareLine_Project.spj
(+93 files in other folders)
