SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui_Screen4.c
    ui_Screen5.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_176188083.c
    ui_img_383071526.c
    ui_img_1719020684.c
    ui_img_220545925.c
    ui_img_1666199263.c
    ui_img_85097194.c
    fonts/ui_font_SonicSaber.c)

add_library(ui ${SOURCES})
